@@ -26,7 +26,7 @@ function smarty_modifier_strip_tags($string, $replace_with_space = true)
         if ($smarty->has_mb) {
             return mb_ereg_replace('!<[^>]*?>!', ' ', $string, 'p');
         } else {
-            return ereg_replace('!<[^>]*?>!', ' ', $string, 'p');
+            return preg_replace('!<[^>]*?>!', ' ', $string);
         } 
     } else {
         return strip_tags($string);
